Scope and Download
Update to Bahamas use-case and added blank target for links to MSP
toolset download

--- a/data.html
+++ b/data.html
@@ -220,7 +220,7 @@ Click on the links or hover over the map markers to learn more about these regio
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;InVEST Helper Tools</h2>
 <img src="img/on_ramp.png"><br>
-Spatial and tabular data typically require some amount of processing before they can be plugged into <a href="marine_invest.html">Marine InVEST</a> or other <a href="analyze.html#tools">MSP decision-support tools</a>. Data processing is a challenging but necessary step. NatCap has created a <a href="http://msp.naturalcapitalproject.org/download/">MSP Toolset</a> and documentation to assist InVEST users with preparing and formatting data inputs for analyzing ecosystem service outcomes: 
+Spatial and tabular data typically require some amount of processing before they can be plugged into <a href="marine_invest.html">Marine InVEST</a> or other <a href="analyze.html#tools">MSP decision-support tools</a>. Data processing is a challenging but necessary step. NatCap has created a <a href="http://msp.naturalcapitalproject.org/download/" target="_blank">MSP Toolset</a> and documentation to assist InVEST users with preparing and formatting data inputs for analyzing ecosystem service outcomes: 
 <ol>
 <li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank">InVEST 3.x Data Requirements</a> - A spreadsheet listing the required and optional inputs for each InVEST model</li>
 <li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
