--- a/scope.html
+++ b/scope.html
@@ -246,12 +246,12 @@ Our work in New England spans across multiple ecosystem service categories and p
 <p></p>
 <h4>Bahamas</h4>
 Info coming soon!<p></p>
-<li><u>Geographic area</u>: <b>Andros Island</b></li>
-<li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas</b></li>
-<li><u>Policy window and timeline</u>: <b>One-year study funded by the IDB</b></li>
-<li><u>Important issues and ecosystem components</u>: xxx</li>
-<li><u>Specific questions asked</u>: xxx</li>
-<li><u>Expected outcomes</u>: xxx</li>
+<li><u>Geographic area</u>: <b>Andros Island, Bahamas</b></li>
+<li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas, Office of the Prime Minister, The Government of the Bahamas</b></li>
+<li><u>Policy window and timeline</u>: <b>June 2015 - March 2016</b></li>
+<li><u>Important issues and ecosystem components</u>: Pressing management issues revolve around agriculture development and diversification, timber development, port expansion, and policies related to sport fishing for bonefish.</li>
+<li><u>Specific questions asked</u>: The overarching management question is where to site and expand coastal and ocean uses to reduce risk to coral reefs, mangrove and other coastal forests, wetlands and seagrass and enhance the service these ecosystems provide to people. </li>
+<li><u>Expected outcomes</u>: Master plan with spatial zoning scheme, ecosystem-based development guidelines</li>
 <p></p>
 </body>
 </html>
