--- a/marine_invest.html
+++ b/marine_invest.html
@@ -151,7 +151,7 @@ window.onload = function (evt) {
 <img src="img/logo_InVEST.jpg" align="left">InVEST is a suite of software models used to <b>map and value the goods and services from nature that sustain and fulfill human life</b>.  The toolkit can aid decision makers to assess quantified tradeoffs associated with alternative management choices and to identify areas where investment in natural capital can enhance human development and conservation.
 <p></p>
 Some of the models within InVEST can be applied for coastal-marine ecosystem assessment, planning and management.
-<b><a href="http://msp.naturalcapitalproject.org/download/">Click here</a> to download the InVEST MSP Toolset</b>.
+<b><a href="http://msp.naturalcapitalproject.org/download/" target="_blank">Click here</a> to download the InVEST MSP Toolset</b>.
 <p></p>
 <ul id="folio_scroller">
 <li><span>Diagram showing potential linkages across InVEST models.  We consider a linkage to be when outputs of one model are used as inputs to another.</span><a href="img/invest_linkages.png" target="_blank"><img alt="" src="img/invest_linkages.png" /></a></li>
