Changes from Amy
A few edits.

--- a/scenarios.html
+++ b/scenarios.html
@@ -168,7 +168,7 @@ window.onload = function (evt) {
 </ul>
 <p></p>
 <ul id="folio_scroller">
-<li><span>Scenarios are plausible descriptions of possible futures, used to illuminate choices and consequences.  NatCap has found it informative to compare these future storylines to current (baseline) conditions.  Stakeholder and decision-makers typically have knowledge of current conditions and understand comparisons to a baseline such as change in area of permitted fishing activity or percent increase in spiny lobster catch and revenue due to some management action (e.g., new marine management area).</span><img alt="" src="img/scenarios_diagram.png" /></a></li>
+<li><span>Scenarios are plausible descriptions of possible futures, used to illuminate choices and consequences.  NatCap has found it informative to compare these alternative futures to a baseline.  Stakeholders and decision-makers typically have knowledge of current conditions and understand comparisons to a baseline such as change in area of permitted fishing activity or percent increase in spiny lobster catch and revenue due to some management action (e.g., new marine management area).</span><img alt="" src="img/scenarios_diagram.png" /></a></li>
 </ul>
 <p></p><br>
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
