Minor edits from beta testers
Bahamas case and Iterate step

--- a/iterate.html
+++ b/iterate.html
@@ -166,7 +166,7 @@ The following is a diagram of an approach for ecosystem service assessment, that
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
 <ul>
-<li>Use iteration early on to identify additional data needs, produce initial results to show to local contacts, and get more comfortable with the mechanics of applying scenario development and ecosystem service analysis tools (<a href="http://www.naturalcapitalproject.org/pubs/Belize_InVEST_scenarios_case_study.pdf" target="_blank">Rosenthal et al. 2013</a>)</li>
+<li>Use iteration early on to identify additional data needs, produce initial results to show to local contacts, and get more comfortable with the mechanics of applying scenario development and ecosystem service analysis tools (see pages 5-7 "How were scenarios developed?" in <a href="http://www.naturalcapitalproject.org/pubs/Belize_InVEST_scenarios_case_study.pdf" target="_blank">Rosenthal et al. 2013</a>)</li>
 <li>Expect to iterate through your planning process and use this expectation as a way of moving forward, rather than getting stuck trying to perfect the outputs from each step</li>
 <li>Plan to iterate through the science-policy process to ensure your process is responsive to changing conditions.</li>
 <li>Iterate through the Scenarios &#8596; Analyze &#8596; Synthesize steps to design a "preferred" spatial plan (<a href="coming_soon.html">Arkema et al. 2015</a>)</li>
