--- a/scope.html
+++ b/scope.html
@@ -245,7 +245,7 @@ Our work in New England spans across multiple ecosystem service categories and p
 <li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional MSP, publicly hosted by NatCap or partners.</li>
 <p></p>
 <h4>Bahamas</h4>
-Info coming soon!<p></p>
+In the Bahamas, the Office of the Prime Minister (OPM) is working with the Natural Capital Project, the Inter-American Development Bank and The Nature Conservancy to design a master plan for Andros Island that will serve as a pilot for their national economic development planning.  Over the course of the next nine months, the partners will work in collaboration with key stakeholders on Andros Island to put forward a preferred master plan that will achieve multiple objectives such as enhancing and diversifying agriculture yield, increasing revenue from sport fishing, catch and revenue from local and domestic markets of crab and conch, respectively, and reducing damages and loss of life from coastal hurricanes.<p></p>
 <li><u>Geographic area</u>: <b>Andros Island, Bahamas</b></li>
 <li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas, Office of the Prime Minister, The Government of the Bahamas</b></li>
 <li><u>Policy window and timeline</u>: <b>June 2015 - March 2016</b></li>
